# multiflexi-mcp-server

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
debian/: Jenkinsfile  Jenkinsfile.release  changelog  control  copyright  py3dist-overrides  rules
debian/tests/: control  unit
docs/: api-examples.md  configuration.md
src/multiflexi_mcp_server/: __init__.py  client.py  config.py  server.py
tests/: test_client.py  test_config.py  test_server.py
